--- a/CSS/style.css
+++ b/CSS/style.css
@@ -324,3 +324,38 @@ input[type=number]{
     font-size: 20px;
     font-weight: 400;
 }
+
+/* ----------------------------------------------News latter Sections style*/
+.news-latter-container{
+    text-align: center;
+    padding: 80px 100px 80px 100px;
+    border-radius: 24px;
+    background: rgb(198, 228, 214);
+    margin-bottom: 80px;
+}
+
+input[type=text]{
+    display: inline;
+    width: 80%;
+    height: auto;
+    padding: 20px 40px 20px 40px;
+    margin-top: 32px;
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 15px 0px 0px 15px;
+    background: rgb(255, 255, 255);
+    text-align: center;
+    margin-bottom: 32px;
+}
+
+.btn-subscribe{
+    display: inline;
+    width: 150px;
+    height: 56px;
+    font-family: Fira Sans;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 0px 8px 8px 0px;
+    color: white;
+    background: rgb(0, 106, 80);
+}
